--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext{
+        kotlin_version = "1.3.72"
+        version_core = "1.3.1"
+        version_coroutine = "1.3.7"
+        version_constraint_layout = "2.0.0-rc1"
+        version_gradle = '4.0.1'
+        version_kotlin = "1.3.72"
+        version_lifecycle_extensions = "2.2.0"
+        version_lifecycle = "2.2.0"
+        version_navigation = '1.0.0'
+        version_room = "2.2.5"
+    }
     repositories {
         google()
         jcenter()
@@ -8,27 +19,13 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-ext {
-    activityVersion = '1.1.0'
-    appCompatVersion = '1.2.0'
-    constraintLayoutVersion = '2.0.2'
-    coreTestingVersion = '2.1.0'
-    coroutines = '1.3.9'
-    lifecycleVersion = '2.2.0'
-    materialVersion = '1.2.1'
-    roomVersion = '2.2.5'
-    version_lifecycle = "2.2.0"
-    version_navigation = '1.0.0'
-    // testing
-    junitVersion = '4.13.1'
-    espressoVersion = '3.1.0'
-    androidxJunitVersion = '1.1.2'
-}
+
 
 
 allprojects {
